# scrape-player-info

./: manual_updates.csv  pyproject.toml  scrape-player-info.ipynb  scrape-player-info.py
.github/workflows/: main.yml
data/: player-info.csv
