[tool.poetry]
name = "scrape-player-info"
version = "0.1.0"
description = ""
authors = ["petebrown <15838790+petebrown@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "scrape_player_info"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.2"
pandas = "^1.5.3"
requests = "^2.28.2"
jupyter = "^1.0.0"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
